@@ -52,6 +52,7 @@
 - add remote-fs.target systemd dependency.
 - fix typo in autofs.conf.
 - fix yp map age not updated during map lookup.
+- add config option to supress not found log message.
 
 21/04/2015 autofs-5.1.1
 =======================
